--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -11,10 +11,10 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
-  </div>
+<!--  <div class="field">-->
+    <%#= form.label :user_id %>
+    <%#= form.text_field :user_id %>
+<!--  </div>-->
 
   <div class="field">
     <%= form.label :title %>
@@ -27,8 +27,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :opt_appraisal %>
-    <%= form.number_field :opt_appraisal %>
+    <%= form.label :pes_assessment %>
+    <%= form.number_field :pes_assessment %>
   </div>
 
   <div class="field">
@@ -36,15 +36,15 @@
     <%= form.number_field :nom_rating %>
   </div>
 
-  <div class="field">
-    <%= form.label :exp_duration %>
-    <%= form.number_field :exp_duration %>
-  </div>
+<!--  <div class="field">-->
+    <%#= form.label :exp_duration %>
+    <%#= form.number_field :exp_duration %>
+<!--  </div>-->
 
-  <div class="field">
-    <%= form.label :pos_deviation %>
-    <%= form.number_field :pos_deviation %>
-  </div>
+<!--  <div class="field">-->
+    <%#= form.label :pos_deviation %>
+    <%#= form.number_field :pos_deviation %>
+<!--  </div>-->
 
   <div class="actions">
     <%= form.submit %>
