--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= @goal.user %>
+  <%= @goal.user.email %>
 </p>
 
 <p>
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Opt appraisal:</strong>
-  <%= @goal.opt_appraisal %>
+  <%= @goal.pes_assessment %>
 </p>
 
 <p>
