--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,9 @@
 </head>
 
 <body>
+<li><%= link_to "start", root_path %></li>
 <% if user_signed_in? %>
-  <li><%= link_to 'Профиль', current_user %></li>
+  <li><%= link_to 'Профиль', edit_user_registration_path %></li>
   <li><%= link_to 'Выйти', destroy_user_session_path,
                   method: :delete %></li>
 <% else %>
