--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= @user.User %>
+  <%= @user.User.email %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
