--- a/app/views/goals/_set_duration_form.html.erb
+++ b/app/views/goals/_set_duration_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: @goal, local: true) do |form| %>
-  <% if @goal.errors.any? %>
+<%= form_with(model: goal, url: set_duration_goal_url) do |form| %>
+  <% if goal.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@goal.errors.count, "error") %> prohibited this goal from being saved:</h2>
+      <h2><%= pluralize(goal.errors.count, "error") %> prohibited this goal from being saved:</h2>
 
       <ul>
-        <% @goal.errors.full_messages.each do |message| %>
+        <% goal.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
