--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -26,6 +26,7 @@
         <td><%= goal.pos_deviation %></td>
         <td><%= link_to 'Show', goal %></td>
         <td><%= link_to 'Edit', edit_goal_path(goal) %></td>
+        <td><%= link_to 'unshow', set_duration_goal_path(goal) %></td>
         <td><%= link_to 'Destroy', goal, method: :delete, data: {confirm: 'Are you sure?'} %></td>
       </tr>
     <% end %>
