--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,7 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<h1><%= t('views.goal.goals') %></h1>
 
+<% if @goals.empty? %>
+  <p> У вас нет ни одной цели </p>
+<% else %>
+  <h1><%= t('views.goal.goals') %></h1>
   <table style="text-align: center">
     <thead>
     <tr>
@@ -26,13 +29,13 @@
         <td><%= goal.pos_deviation %></td>
         <td><%= link_to 'Show', goal %></td>
         <td><%= link_to 'Edit', edit_goal_path(goal) %></td>
-        <td><%= link_to 'unshow', set_duration_goal_path(goal) %></td>
-        <td><%= link_to 'Destroy', goal, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+        <td><%= link_to 'Archive', set_duration_goal_path(goal) %></td>
       </tr>
     <% end %>
     </tbody>
   </table>
+<% end %>
 
-  <br>
+<br>
 
-  <%= link_to t('views.goal.new_goal'), new_goal_path %>
+<%= link_to t('views.goal.new_goal'), new_goal_path %>
