--- a/app/views/goals/edit.html.erb
+++ b/app/views/goals/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Goal</h1>
+<h1><%= t('views.goal.editing_goal') %></h1>
 
 <%= render 'form', goal: @goal %>
 
-<%= link_to 'Show', @goal %> |
-<%= link_to 'Back', goals_path %>
+<%= link_to t('views.goal.show'), @goal %> |
+<%= link_to t('views.goal.back'), goals_path %>
