--- a/app/views/goals/set_duration.html.erb
+++ b/app/views/goals/set_duration.html.erb
@@ -1,6 +1,6 @@
-<h1>arc</h1>
+<h1><%= t('views.goal.arch_goal') %></h1>
 
 <%= render 'set_duration_form', goal: @goal %>
 
-<%= link_to 'Show', @goal %> |
-<%= link_to 'Back', goals_path %>
+<%= link_to t('views.goal.show'), @goal %> |
+<%= link_to t('views.goal.back'), goals_path %>
