truble with views errors

--- a/app/views/goals/set_duration.html.erb
+++ b/app/views/goals/set_duration.html.erb
@@ -1,6 +1,6 @@
 <h1><%= t('views.goal.arch_goal') %></h1>
 
-<%= render 'set_duration_form', goal: @goal %>
+<%= render 'set_duration_form' %>
 
 <%= link_to t('views.goal.show'), @goal %> |
 <%= link_to t('views.goal.back'), goals_path %>
