--- a/app/views/goals/_set_duration_form.html.erb
+++ b/app/views/goals/_set_duration_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: goal, url: set_duration_goal_path) do |form| %>
-  <% if goal.errors.any? %>
+<%= form_with(scope: @goal) do |form| %>
+  <% if @goal.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(goal.errors.count, "error") %> prohibited this goal from being saved:</h2>
+      <h2><%= pluralize(@goal.errors.count, "error") %> prohibited this goal from being saved:</h2>
 
       <ul>
-        <% goal.errors.full_messages.each do |message| %>
+        <% @goal.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
@@ -12,6 +12,9 @@
   <% end %>
 
   <div class="field">
+    <%= params[:act_duration].class %>
+    <%= @goal.class %>
+    <%= @goal.act_duration.class %>
     <%= form.label :act_duration %>
     <%= form.number_field :act_duration %>
   </div>
