--- a/app/views/goals/_archiv_form.html.erb
+++ b/app/views/goals/_archiv_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(scope: @goal) do |form| %>
+<%= form_with(model: @goal, url: set_duration_goal_path) do |form| %>
   <% if @goal.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@goal.errors.count, "error") %> prohibited this goal from being saved:</h2>
@@ -12,9 +12,13 @@
   <% end %>
 
   <div class="field">
-    <%= params[:act_duration].class %>
-    <%= @goal.class %>
-    <%= @goal.act_duration.class %>
+    <%= @goal.errors %>
+    <br>
+    <%= @goal.errors.any? %>
+    <br>
+    <%= @goal %>
+    <br>
+    <%= @goal.act_duration %>
     <%= form.label :act_duration %>
     <%= form.number_field :act_duration %>
   </div>
