--- a/app/views/goals/archiv.html.erb
+++ b/app/views/goals/archiv.html.erb
@@ -1,6 +1,6 @@
 <h1><%= t('views.goal.arch_goal') %></h1>
 
-<%= render 'set_duration_form' %>
+<%= render 'archiv_form', goal: @goal %>
 
 <%= link_to t('views.goal.show'), @goal %> |
 <%= link_to t('views.goal.back'), goals_path %>
