--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -28,7 +28,8 @@
         <td><%= goal.pos_deviation %></td>
         <td><%= link_to t('views.goal.show'), goal %></td>
         <td><%= link_to t('views.goal.edit'), edit_goal_path(goal) %></td>
-        <td><%= link_to t('views.goal.archive'), set_duration_goal_path(goal) %></td>
+        <td><%= link_to t('views.goal.archive'), archiv_goal_path(goal) %></td>
+<!--        <td><%#= link_to t('views.goal.archive'), set_duration_goal_path(goal) %></td>-->
       </tr>
     <% end %>
     </tbody>
