--- a/app/views/goals/pre_archived.html.erb
+++ b/app/views/goals/pre_archived.html.erb
@@ -1,6 +1,6 @@
 <h1><%= t('views.goal.arch_goal') %></h1>
 
-<%= render 'archiv_form', goal: @goal %>
+<%= render 'pre_archived_form', goal: @goal %>
 
 <%= link_to t('views.goal.show'), @goal %> |
 <%= link_to t('views.goal.back'), goals_path %>
