--- a/app/views/goals/_pre_archived_form.html.erb
+++ b/app/views/goals/_pre_archived_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @goal, url: set_duration_goal_path) do |form| %>
+<%= form_with(model: @goal, local: true, url: archived_goal_path) do |form| %>
   <% if @goal.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@goal.errors.count, "error") %> prohibited this goal from being saved:</h2>
@@ -12,13 +12,6 @@
   <% end %>
 
   <div class="field">
-    <%= @goal.errors %>
-    <br>
-    <%= @goal.errors.any? %>
-    <br>
-    <%= @goal %>
-    <br>
-    <%= @goal.act_duration %>
     <%= form.label :act_duration %>
     <%= form.number_field :act_duration %>
   </div>
