--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -1,37 +1,45 @@
 <%= form_with(model: goal, local: true) do |form| %>
-  <% if goal.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(goal.errors.count, "error") %> prohibited this goal from being saved:</h2>
+  <%# if goal.errors.any? %>
+<!--    <div id="error_explanation">-->
+<!--      <h2><%#= pluralize(goal.errors.count, "error") %> prohibited this goal from being saved:</h2>-->
 
-      <ul>
-        <% goal.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
+<!--      <ul>-->
+        <%# goal.errors.full_messages.each do |message| %>
+<!--          <li><%#= message %></li>-->
+        <%# end %>
+<!--      </ul>-->
+<!--    </div>-->
+  <%# end %>
+
+<!--  <div class="field">-->
+    <%#= form.label :title %>
+    <%#= form.text_field :title %>
+<!--  </div>-->
+
+<!--  <div class="field">-->
+    <%#= form.label :opt_assessment %>
+    <%#= form.number_field :opt_assessment %>
+<!--  </div>-->
+
+<!--  <div class="field">-->
+    <%#= form.label :pes_assessment %>
+    <%#= form.number_field :pes_assessment %>
+<!--  </div>-->
+
+<!--  <div class="field">-->
+    <%#= form.label :nom_rating %>
+    <%#= form.number_field :nom_rating %>
+<!--  </div>-->
+
+<!--  <div class="actions">-->
+    <%#= form.submit%>
+<!--  </div>-->
+
+  <%= simple_form_for @goal do |f| %>
+    <%= f.input :title %>
+    <%= f.input :opt_assessment %>
+    <%= f.input :pes_assessment %>
+    <%= f.input :nom_rating %>
+    <%= f.button :submit, 'Создать', class: 'btn btn-primary' %>
   <% end %>
-
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= form.label :opt_assessment %>
-    <%= form.number_field :opt_assessment %>
-  </div>
-
-  <div class="field">
-    <%= form.label :pes_assessment %>
-    <%= form.number_field :pes_assessment %>
-  </div>
-
-  <div class="field">
-    <%= form.label :nom_rating %>
-    <%= form.number_field :nom_rating %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
 <% end %>
