--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -37,4 +37,4 @@
 
 <br>
 
-<%= link_to t('views.goal.new_goal'), new_goal_path %>
+<%= link_to t('views.goal.new_goal'), new_goal_path, class: 'btn btn-primary' %>
