--- a/app/views/goals/pre_archived.html.erb
+++ b/app/views/goals/pre_archived.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'pre_archived_form', goal: @goal %>
 
-<%= link_to t('views.goal.show'), @goal %> |
+<br>
+<%= link_to t('views.goal.show'), @goal %>
 <%= link_to t('views.goal.back'), goals_path %>
