--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,15 +11,19 @@
 
 <body>
 
-<% if user_signed_in? %>
-  <li><%= link_to t('app.to_the_start'), goals_path %></li>
-  <li><%= link_to 'Профиль', edit_user_registration_path %></li>
-  <li><%= link_to 'Выйти', destroy_user_session_path, method: :delete %></li>
-<% else %>
-  <li><%= link_to t('app.to_the_start'), root_path %></li>
-  <li><%= link_to 'Войти', new_user_session_path %></li>
-  <li><%= link_to 'Зарегистрироваться', new_user_registration_path %></li>
-<% end %>
-<%= yield %>
+<div class="navbar navbar-default navbar-static-top">
+  <% if user_signed_in? %>
+    <li><%= link_to t('app.to_the_start'), goals_path %></li>
+    <li><%= link_to 'Профиль', edit_user_registration_path %></li>
+    <li><%= link_to 'Выйти', destroy_user_session_path, method: :delete %></li>
+  <% else %>
+    <li><%= link_to t('app.to_the_start'), root_path %></li>
+    <li><%= link_to 'Войти', new_user_session_path %></li>
+    <li><%= link_to 'Зарегистрироваться', new_user_registration_path %></li>
+  <% end %>
+</div>
+<div class="container">
+  <%= yield %>
+</div>
 </body>
 </html>
