--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -40,6 +40,6 @@
     <%= f.input :opt_assessment %>
     <%= f.input :pes_assessment %>
     <%= f.input :nom_rating %>
-    <%= f.button :submit, 'Создать', class: 'btn btn-primary' %>
+    <%= f.button :submit, t('views.goal.save'), class: 'btn btn-primary' %>
   <% end %>
 <% end %>
