--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,34 +1,36 @@
 <h2><%= t('devise.edit_user') %></h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put}) do |f| %>
   <%= f.error_notification %>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="form-inputs">
+        <%= f.input :email, required: true, autofocus: true %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+        <% end %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
-
-    <%= f.input :password,
-                hint: t('devise.passwords.want_change'),
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: t('devise.passwords.confirm_change'),
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+        <%= f.input :password,
+                    hint: t('devise.passwords.want_change'),
+                    required: false,
+                    input_html: {autocomplete: "new-password"} %>
+        <%= f.input :password_confirmation,
+                    required: false,
+                    input_html: {autocomplete: "new-password"} %>
+        <%= f.input :current_password,
+                    hint: t('devise.passwords.confirm_change'),
+                    required: true,
+                    input_html: {autocomplete: "current-password"} %>
+      </div>
+    </div>
   </div>
-
   <div class="form-actions">
     <%= f.button :submit, t('views.goal.save'), class: 'btn btn-primary' %>
   </div>
 <% end %>
 <br>
 <p><%= t('devise.del_acc') %>?</p>
-<%= link_to t('devise.del'), registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %>
+<%= link_to t('devise.del'), registration_path(resource_name), data: {confirm: "Are you sure?"}, method: :delete %>
 <br>
 <%= link_to t('views.goal.back'), :back %>
