--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -26,9 +26,8 @@
         <td><%= goal.pes_assessment %></td>
         <td><%= goal.exp_duration %></td>
         <td><%= goal.pos_deviation %></td>
-<!--        <td><%#= link_to t('views.goal.show'), goal %></td>-->
         <td><%= link_to t('views.goal.edit'), edit_goal_path(goal) %></td>
-        <td><%= link_to t('views.goal.archive'), pre_archived_goal_path(goal) %></td>
+        <td><%= link_to t('views.goal.archive'), ar_goal_path(goal) %></td>
       </tr>
     <% end %>
     </tbody>
