--- a/app/views/goals/_edit_arch_form.html.erb
+++ b/app/views/goals/_edit_arch_form.html.erb
@@ -1,4 +1,5 @@
-  <%= simple_form_for @goal do |f| %>
-    <%= f.input :act_duration %>
-    <%= f.button :submit, t('views.goal.save'), class: 'btn btn-primary' %>
-  <% end %>
+<%= simple_form_for @goal do |f| %>
+  <%= f.input :act_duration %>
+  <%= f.button :submit, t('views.goal.save'), class: 'btn btn-primary' %>
+<% end %>
+</form>
