--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -27,8 +27,8 @@
         <td><%= goal.exp_duration %></td>
         <td><%= goal.pos_deviation %></td>
 <!--        <td><%#= link_to t('views.goal.show'), goal %></td>-->
-        <td><%= link_to t('views.goal.edit'), edit_goal_path(goal) %></td>
-        <td><%= link_to t('views.goal.archive'), pre_archived_goal_path(goal) %></td>
+        <td><%= link_to fa_icon('edit'), edit_goal_path(goal), title: t('views.goal.edit') %></td>
+        <td><%= link_to fa_icon('archive'), pre_archived_goal_path(goal),  title: t('views.goal.archive')  %></td>
       </tr>
     <% end %>
     </tbody>
