--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -41,6 +41,7 @@
         <%= f.input :opt_assessment %>
         <%= f.input :pes_assessment %>
         <%= f.input :nom_rating %>
+        <%= f.input :description %>
         <%= f.button :submit, t('views.goal.save'), class: 'btn btn-primary' %>
       <% end %>
     </div>
