--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,19 +15,28 @@
 
 <body>
 
-<div class="navbar navbar-default navbar-static-top">
+<nav class="navbar navbar-light bg-light">
   <% if user_signed_in? %>
-    <li><%= link_to t('app.to_the_start'), goals_path %></li>
-    <li><%= link_to 'Профиль', edit_user_registration_path %></li>
-    <li><%= link_to 'Выйти', destroy_user_session_path, method: :delete %></li>
+    <li class="nav-link"><%= link_to t('app.to_the_start'), goals_path %></li>
+    <form class="form-inline my-2 my-lg-0">
+      <li class="nav-link"><%= link_to 'Профиль', edit_user_registration_path, class: 'pull-right' %></li>
+      <li class="nav-link"><%= link_to 'Выйти', destroy_user_session_path, method: :delete %></li>
+    </form>
   <% else %>
-    <li><%= link_to t('app.to_the_start'), root_path %></li>
-    <li><%= link_to 'Войти', new_user_session_path %></li>
-    <li><%= link_to 'Зарегистрироваться', new_user_registration_path %></li>
+    <li class="nav-link"><%= link_to t('app.to_the_start'), root_path %></li>
+    <form class="form-inline my-2 my-lg-0">
+      <li class="nav-link"><%= link_to 'Войти', new_user_session_path, class: 'pull-right' %></li>
+      <li class="nav-link"><%= link_to 'Зарегистрироваться', new_user_registration_path %></li>
+    </form>
   <% end %>
-</div>
+</nav>
+
 <div class="container">
   <%= yield %>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
