--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -4,12 +4,16 @@
   <table class="table-sm table-hover">
     <thead>
     <tr>
-      <th><%= t('views.goal.title') %></th>
-      <th><%= t('views.goal.opt_assessment') %></th>
-      <th><%= t('views.goal.nom_rating') %></th>
-      <th><%= t('views.goal.pes_assessment') %></th>
-      <th><%= t('views.goal.exp_duration') %></th>
-      <th><%= t('views.goal.pos_deviation') %></th>
+      <% if @goals.empty? %>
+        <p><%= t('views.goal.no_goal') %></p>
+      <% else %>
+        <th><%= t('views.goal.title') %></th>
+        <th><%= t('views.goal.opt_assessment') %></th>
+        <th><%= t('views.goal.nom_rating') %></th>
+        <th><%= t('views.goal.pes_assessment') %></th>
+        <th><%= t('views.goal.exp_duration') %></th>
+        <th><%= t('views.goal.pos_deviation') %></th>
+      <% end %>
     </tr>
     </thead>
     <tbody>
